--- a/app/views/hello_world/index.html.erb
+++ b/app/views/hello_world/index.html.erb
@@ -1,3 +1,3 @@
-<h1 class="alert alert-info this-works">Hello World</h1>
-<%= react_component("HelloWorldApp", props: @hello_world_props, prerender: false) %>
+<h1 class="alert alert-info this-works">Welcome, Teacher</h1>
+<%= react_component("TeacherView", props: @hello_world_props, prerender: false) %>
 
