--- a/app/assets/stylesheets/teacherview.scss
+++ b/app/assets/stylesheets/teacherview.scss
@@ -16,3 +16,11 @@
 .container {
   clear: both;
 }
+
+.upload-video {
+  width: 20%;
+  height: 10em;
+  vertical-align: middle;;
+  margin: 1em 0;
+  border: 1px solid black;
+}
