max width, max height

--- a/app/assets/stylesheets/teacherview.scss.erb
+++ b/app/assets/stylesheets/teacherview.scss.erb
@@ -63,8 +63,8 @@ body {
       height: $remote_video_size;
 
       video {
-        width: $remote_video_size !important;
-        height: $remote_video_size !important;
+        max-width: $remote_video_size !important;
+        max-height: $remote_video_size !important;
       }
     }
   }
