student name css

--- a/app/assets/stylesheets/teacherview.scss.erb
+++ b/app/assets/stylesheets/teacherview.scss.erb
@@ -74,6 +74,13 @@ body {
       width: $remote_video_size;
       height: $remote_video_size;
 
+      .student-name {
+        color: white;
+        opacity: 0.8;
+        font-weight: bold;
+        font-size: large;
+      }
+
       video {
         max-width: $remote_video_size !important;
         max-height: $remote_video_size !important;
