better name css

--- a/app/assets/stylesheets/teacherview.scss.erb
+++ b/app/assets/stylesheets/teacherview.scss.erb
@@ -70,6 +70,7 @@ body {
     height: auto;
 
     .videoContainer {
+      position: relative;
       padding-top: $remote_video_padding;
       width: $remote_video_size;
       height: $remote_video_size;
@@ -79,6 +80,8 @@ body {
         opacity: 0.8;
         font-weight: bold;
         font-size: large;
+        position: absolute;
+        top: 1em;
       }
 
       video {
