add hidden louise

--- a/app/views/teacher_view/index.html.erb
+++ b/app/views/teacher_view/index.html.erb
@@ -1,5 +1,6 @@
 <%= react_component("TeacherView", prerender: false, props: @teacherview_props.merge(
   assets: {
+    'Louise.jpg' => asset_path('Louise.jpg'),
     'record.svg' => asset_path('record.svg'),
     'stop.svg' => asset_path('stop.svg')
   }
