uploading notification and jump tabs on save

--- a/app/assets/stylesheets/teacherview.scss.erb
+++ b/app/assets/stylesheets/teacherview.scss.erb
@@ -5,10 +5,11 @@ body {
 
 .tab-container {
     padding-bottom: 1em;
+    clear: both;
 
     .tab {
         cursor: pointer;
-        float: left;
+        display: inline-block;
         margin-right: 1em;
 
         &:hover {
