--- a/app/assets/stylesheets/teacherview.scss.erb
+++ b/app/assets/stylesheets/teacherview.scss.erb
@@ -99,3 +99,12 @@ body {
   display: none;
   width: 100%;
 }
+
+.uploading {
+  color: white;
+  opacity: 0.8;
+  font-weight: bold;
+  font-size: large;
+  position: absolute;
+  bottom: 3em;
+}
