Updated CSS on teacher view

--- a/app/assets/stylesheets/teacherview.scss.erb
+++ b/app/assets/stylesheets/teacherview.scss.erb
@@ -1,10 +1,24 @@
+  $remote_video_padding: 2em;
+  $record_button_size: 10em;
+  $remote_video_size: 12em;
+  $record_button_horiz_padding: 2em + ($remote_video_size - $record_button_size) / 2;
+
 body {
   background-image: url(<%= asset_path('concrete.png') %>);
   color: rgba(50,50,50,0.8);
+    height: 100%;
+    overflow: hidden;
 }
 
 .tab-container {
-    padding-bottom: 1em;
+    padding: 1em;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 1);
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    color: rgba(255, 255, 255, 0.9);
+
 
     .tab {
         cursor: pointer;
@@ -19,7 +33,7 @@ body {
 }
 
 .container {
-  clear: both;
+  height: 100%;
 }
 
 .container.archive {
@@ -33,20 +47,18 @@ body {
   position: relative;
 
   .local {
-    width: 100%;   
+    width: 100%;
+    overflow: hidden
   }
 
-  $remote_video_padding: 2em;
-  $record_button_size: 10em;
-  $remote_video_size: 12em;
-  $record_button_horiz_padding: 2em + ($remote_video_size - $record_button_size) / 2;
+
 
   .grey-background {
     position: absolute;
     top: 0;
     right: 0;
     width: $remote_video_padding + $remote_video_size + $remote_video_padding;
-    height: 100%;
+    height: 100vh;
     /* background-image: url(<%= asset_path('concrete.png') %>); */
     background-color: black;
     opacity: 0.2;
@@ -98,3 +110,4 @@ body {
   display: none;
   width: 100%;
 }
+
