--- a/app/assets/stylesheets/teacherview.scss.erb
+++ b/app/assets/stylesheets/teacherview.scss.erb
@@ -121,3 +121,13 @@ body {
   bottom: 3em;
 }
 
+h3 {
+    padding-left: 0.75em;
+}
+
+.archive-title {
+     background-color: grey;
+    padding: 0.75em;
+    color: white;
+    font-size: large;
+}
